# cookiecutter-pypackage-poetry

./: LICENSE  Makefile  README.md  cookiecutter.json  example.yaml
example/: .bumpversion.cfg  LICENSE  README.md  makefile  pyproject.toml  setup.cfg
example/.github/: ISSUE_TEMPLATE.md  labeler.yml
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .bumpversion.cfg  LICENSE  README.md  makefile  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/.github/: ISSUE_TEMPLATE.md  labeler.yml
{{ cookiecutter.project_name }}/.github/workflows/: bump_version.yml
{{cookiecutter.project_name}}/: .travis.yml  LICENSE  README.md  makefile  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/: ISSUE_TEMPLATE.md
