[tool.poetry]
name = "example"
version = "0.0.0"
description = "My example project"
authors = ["Afonasev Evgeniy <ea.afonasev@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Afonasev/example"
homepage = "https://pypi.org/project/example"
keywords = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autoflake = "^1.3"
black = {version = "^19.10b0", allow-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = "^1.0"
mypy = "*"
pylint = "^2.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
unify = "^0.4.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
