[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}"
homepage = "https://pypi.org/project/{{cookiecutter.project_name}}"
keywords = []

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allow-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = "^1.0"
mypy = "^0.660.0"
pylint = "^2.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
unify = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
